extra/visdom_ingress.yaml
# Source: https://www.reddit.com/r/Traefik/comments/d36iry/traefik_20_with_certmanager/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-cert-manager
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
  name: visdom-ingress
spec:
  tls:
  - hosts:
    - visdom.foldy.dev
    secretName: visdom-cert
  rules:
    - host: visdom.foldy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visdom
                port:
                  number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: visdom-https-only
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: visdom-gateway-80
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`visdom.foldy.dev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: visdom
          port: 80
      middlewares:
        - name: visdom-https-only
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: visdom-gateway-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`visdom.foldy.dev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: visdom
          port: 80
  tls:
    secretName: visdom-cert
